# ceditor

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  imgui.ini  index.html
assets/: imgui.ini
assets/shader/: bc.frag  bc.vert  diffuse.frag  diffuse.vert  light.frag  renderer.frag  renderer.vert  sample.frag  sample.vert  specular.frag  specular.vert  texture.frag  texture.vert
bustm/: Makefile  README.md  cmd.go  glue.go  go.mod  go.sum  main.go  module.go  pipe.go  task.go  tpool.go  worker.go
bustm/lua/: build.lua  linux.lua  main.lua
core/: README.md  buffer.hpp  file.hpp  main.c  main.cpp  math.hpp  model.hpp  shader.hpp  sprite.hpp  texture.hpp  util.h  vertex.hpp  window.hpp
core/2d/: renderable.hpp  renderer.hpp  sprite.hpp
core/2d/gui/: functions.h  imgui-style.h
core/3d/: renderer.hpp
core/api/: core.h
core/common/: ref.h
core/logger/: log.cpp  log.h
editor/: imgui_demo.cpp  main-docking.cpp  main.cpp  plot.h
editor/ext/: README.md  portable-file-dialogs.h
entt/: imgui_demo.cpp  main.cpp
sys/: README.md
test/: Makefile  math_test.cpp
toolchains/: README.md
toolchains/android/: README.md  build.gradle
toolchains/android/android-app/: build.gradle
toolchains/android/android-app/src/main/: AndroidManifest.xml
toolchains/android/android-app/src/main/java/cn/apanoo/ceditor/: MainActivity.java
toolchains/android/android-app/src/main/res/values/: strings.xml
toolchains/android/app/: build.gradle
toolchains/android/app/src/androidTest/java/cn/apanoo/ceditor/: ExampleInstrumentedTest.java
toolchains/android/app/src/main/: AndroidManifest.xml
toolchains/android/app/src/main/cpp/: CMakeLists.txt  helper.hpp  native-lib.cpp  renderer.cpp
toolchains/android/app/src/main/java/cn/apanoo/ceditor/: MainActivity.java  RendererJNI.java
toolchains/android/app/src/test/java/cn/apanoo/ceditor/: ExampleUnitTest.java
toolchains/android/gradle/wrapper/: gradle-wrapper.properties
toolchains/desktop/: Makefile  README.md
toolchains/ios/: Info.plist  README
toolchains/ios/ceditor.xcodeproj/: project.pbxproj
toolchains/ios/ceditor.xcodeproj/project.xcworkspace/xcuserdata/apanoo.xcuserdatad/: UserInterfaceState.xcuserstate
toolchains/ios/ceditor.xcodeproj/xcuserdata/apanoo.xcuserdatad/xcschemes/: xcschememanagement.plist
toolchains/web/: Makefile  index-imgui.html  index.html
tools/: go.mod
tools/wes/: main.go
ui/: .eslintrc  README.md  package-lock.json  package.json
ui/app/: Routes.js  app.global.css  app.html  main.dev.js  menu.js
ui/app/actions/: ceditor.js
ui/app/components/: Ceditor.js  Ceditor.scss  Home.js  MainCanvas.js  MainCanvas.scss  MenuBar.js  MenuBar.scss  Property.js  Property.scss  StatusBar.js  StatusBar.scss  ToolBar.js  ToolBar.scss  ToolItem.js  ViewPort.js  ViewPort.scss  common.scss
ui/app/components/menu/: Menu.scss  MenuBar.js  MenuBar.scss  menu.js
ui/app/components/property/: Geometry.js  Geometry.scss  Layers.js  Layers.scss  Material.js  Material.scss  Object.js  Object.scss  Settings.js  Settings.scss
ui/app/components/property/value/: Color.js  Color.scss  Select.js  Select.scss  Value.js  Value.scss
ui/app/components/tab/: Tab.js  Tab.scss  TabList.js  TabList.scss
ui/app/components/tree/: Tree.js  Tree.scss
ui/app/constants/: menu.json
ui/app/containers/: CeditorPage.js
ui/app/reducers/: ceditor.js  index.js  types.js
ui/app/store/: configureStore.dev.js  configureStore.prod.js
ui/app/utils/: uuid.js
